# DLRA-DEIM

./: .gitignore  README.md  pyproject.toml  requirements.txt  validate_installation.py
experiments/: README.md  example_experiment.py
experiments/allen_cahn_global_error/: adaptive_rk45_qdeim.py  checkpoint_reject_compare.py  data_processing.py  main.py  method_definition.py  plotting.py  problem_generation.py  shared_parameters.py  simulation.py  visualize_switch_snapshots.py
experiments/allen_cahn_motivation/: data_processing.py  main.py  method_definition.py  plotting.py  problem_generation.py  shared_parameters.py  simulation.py
experiments/allen_cahn_performance/: data_processing.py  method_definition.py  problem_generation.py  shared_parameters.py  simulation.py
experiments/schrodinger_global_error/: adaptive_rk45_qdeim.py  data_processing.py  main.py  method_definition.py  plotting.py  problem_generation.py  shared_parameters.py  simulation.py
experiments/schrodinger_performance/: data_processing.py  main.py  method_definition.py  problem_generation.py  shared_parameters.py  simulation.py
src/dlra_deim/: __init__.py
src/krylov_toolbox/: __init__.py
src/krylov_toolbox/poles/: __init__.py  optimal_poles.py  optimal_poles_1.mat  optimal_poles_10.mat  optimal_poles_11.mat  optimal_poles_12.mat  optimal_poles_13.mat  optimal_poles_14.mat  optimal_poles_15.mat  optimal_poles_2.mat  optimal_poles_3.mat  optimal_poles_4.mat  optimal_poles_5.mat  optimal_poles_6.mat  optimal_poles_7.mat  optimal_poles_8.mat  (+1 more)
src/low_rank_toolbox/: __init__.py
(+50 files in other folders)
