[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dlra-deim"
version = "0.1.0"
description = "Numerical experiments for the paper DLRA-DEIM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Benjamin Carrel"},
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "dill",
    "pandas",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
