[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlra-deim"
version = "0.1.0"
description = "Numerical experiments for the paper DLRA-DEIM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Benjamin Carrel"},
]
dependencies = [
    "numpy",
    "scipy", 
    "jupyter",
    "matplotlib",
    "dill",
    "pandas",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]
